actualizacion de proyecto

--- a/Proyecto1.html
+++ b/Proyecto1.html
@@ -6,25 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <nav>
+        <!-- barra de navegación. Pendiente cambiar el estilo de las letras-->
+        <section class="barra-de-navegación">
+            <nav>
             <ul>
                 <li>
-                    <a href="#"> ¡Bienvenides! </a>
+                    <a href="#"> ¡BIENVENIDES! </a>
                 </li>
                 <li>
-                    <a href="#"> Lo que sé hacer </a>
+                    <a href="#"> LO QUE SÉ HACER </a>
                 </li>
                 <li>
-                    <a href="#"> Mis proyectos </a>
+                    <a href="#"> MIS PROYECTOS </a>
                 </li>
                 <li class="boton de contacto">
-                    <a href="#"> Contactame </a>
+                    <a href="#"> CONTACTAME </a>
                 </li>
             </ul>
             </nav>
+        </section>
     </header>
 </body>
 </html>
