--- a/Proyecto1.html
+++ b/Proyecto1.html
@@ -8,25 +8,28 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <!-- barra de navegación. Pendiente cambiar el estilo de las letras-->
-        <section class="barra-de-navegación">
             <nav>
             <ul>
                 <li>
-                    <a href="#"> ¡BIENVENIDES! </a>
+                    <a href="#"> ¡Bienvenides! </a>
                 </li>
                 <li>
-                    <a href="#"> LO QUE SÉ HACER </a>
+                    <a href="#"> Lo que sé hacer </a>
                 </li>
                 <li>
-                    <a href="#"> MIS PROYECTOS </a>
+                    <a href="#"> Mis proyectos </a>
                 </li>
                 <li class="boton de contacto">
-                    <a href="#"> CONTACTAME </a>
+                    <a href="#"> Contactame </a>
                 </li>
             </ul>
             </nav>
