final de maquetación

--- a/Proyecto1.html
+++ b/Proyecto1.html
@@ -12,7 +12,12 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;600;800&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/6f65159a17.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -33,7 +38,138 @@
                 </li>
             </ul>
             </nav>
-        </section>
     </header>
+
+
+    <section class="sección-presentación">
+        <div class="Presentación">
+        <div class="texto-presentación">
+            <p class="Bienvenida">
+            ¡Bienvenides! Soy
+        </p>
+            <h1 class="Nombre">
+                Juli Martinelli
+            </h1>
+            <p class="Descripción">
+                Desarrolladora, amante de los libros y de los bares de platitos
+            </p>
+            <a href="#" class="botón-proyectos"> MIS PROYECTOS </a> 
+        </div>
+        <div>
+            <img src="Imagen3.jpg" alt="Mujer trabajando en una computadora" height="400px" width="400px">
+        </div>
+        </div>
+    </section>
+
+
+    <section class="conocimientos">
+        <div class="descripción-conocimientos">
+            <h2 class="título-conocimientos">
+                Lo que sé hacer
+            </h2>
+            <p class="frase-conocimientos">
+                Soy licenciada en Ciencias Políticas y especialista en género y políticas públicas. 
+                Siempre me interesó la programación y la brecha de género en este sector así que en 2023 decidí formarme en este campo. Egresé de la camada 18 de ADA. 
+                Estas son las herramientas que manejo:
+            </p>
+        </div>
+            <div class="contenedor-herramientas">
+                <div class="tarjeta-herramienta">
+                </div>
+                <div class="tarjeta-herramienta">
+                </div>
+                <div class="tarjeta-herramienta">
+                </div>
+                <div class="tarjeta-herramienta">
+                </div>
+                <div class="tarjeta-herramienta">
+                </div>
+                <div class="tarjeta-herramienta">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="sección-frase">
+        <div class="contenido-frase">
+            <h2 class="frase">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic veniam repudiandae adipisci odio dolorum unde maiores tenetur quia placeat quod.
+            </h2>
+        </div>
+    </section>
+    <section class="sección-proyectos">
+        <div class="texto-proyectos">
+            <h2 class="título-proyectos">
+                Los proyectos que hice
+            </h2>
+            <p class="breve-descripción-proyectos">
+                A lo largo de mi formación en ADA realicé estos proyectos, que me ayudaron a consolidar mis conocimientos sobre cada herramientas,<br> prácticar para mejorar mis habilidades y comprender las buenas prácticas en el desarrollo.
+            </p>
+        </div>
+        <div class="contenedor-proyectos">
+        </div>
+    </section>
+    <section class="sección-contacto">
+        <div class="datos-de-contacto">
+            <section class="redes">
+                <h2 class="título-contacto">
+                    Me encontrás en estas redes sociales
+                </h2>
+                <p class="descripción-contacto">
+                    Si te interesa trabajar conmigo o conocer más de lo que hago <br>me podes encontrar en cualquiera de estas redes sociales 
+                </p>
+            </section>
+            <section class="íconos-de-redes">
+                <ul class="lista-redes">
+                    <li>
+                        Instagram
+                    </li>
+                    <li>
+                        Linkedin
+                    </li>
+                    <li>
+                        Gmail
+                    </li>
+                </ul>
+            </section>
+        </div>
+    </section>
+    <section class="sección-contacto">
+        <h2 class="título-escribime">
+            Escribime
+        </h2>
+        <!--ACÁ VA EL FORM DE CONTACTO-->
+    </section>
+    <footer>
+        <nav class="nav-footer">
+            <ul class="menú-footer">
+                <li>
+                    <a href="#"> ¡Bienvenides! </a>
+                </li>
+                <li>
+                    <a href="#"> Lo que sé hacer </a>
+                </li>
+                <li>
+                    <a href="#"> Mis proyectos </a>
+                </li>
+                <li class="boton de contacto">
+                    <a href="#"> Contactame </a>
+                </li>
+            </ul>
+            </nav>
+            <ul class="lista-redes">
+                <li class="apartado-nav-footer">
+                    Instagram
+                </li>
+                <li>
+                    Linkedin
+                </li>
+                <li>
+                    Gmail
+                </li>
+            </ul>
+            <p>
+            Hecho con amor y mucho trabajo por Juli
+            </p>
+    </footer>
 </body>
 </html>
