--- a/Proyecto1.html
+++ b/Proyecto1.html
@@ -22,22 +22,24 @@
 <body>
     <header>
         <!-- barra de navegación. Pendiente cambiar el estilo de las letras-->
-            <nav>
-            <ul>
-                <li>
+            <div class="contenedor-menú-principal">
+            <nav class="menú-principal">
+            <ul class="lista-menú-principal">
+                <li class="item-menú-principal">
                     <a href="#"> ¡Bienvenides! </a>
                 </li>
-                <li>
+                <li class="item-menú-principal">
                     <a href="#"> Lo que sé hacer </a>
                 </li>
-                <li>
+                <li class="item-menú-principal">
                     <a href="#"> Mis proyectos </a>
                 </li>
-                <li class="boton de contacto">
+                <li class="botón-contacto">
                     <a href="#"> Contactame </a>
                 </li>
             </ul>
             </nav>
+        </div>
     </header>
 
 
@@ -102,14 +104,15 @@
                 Los proyectos que hice
             </h2>
             <p class="breve-descripción-proyectos">
-                A lo largo de mi formación en ADA realicé estos proyectos, que me ayudaron a consolidar mis conocimientos sobre cada herramientas,<br> prácticar para mejorar mis habilidades y comprender las buenas prácticas en el desarrollo.
+                A lo largo de mi formación en ADA realicé estos proyectos,<br> que me ayudaron a consolidar mis conocimientos<br> sobre cada herramientas, prácticar para mejorar mis habilidades<br> y comprender las buenas prácticas en el desarrollo.
             </p>
         </div>
         <div class="contenedor-proyectos">
         </div>
     </section>
     <section class="sección-contacto">
-        <div class="datos-de-contacto">
+        <div class="contenedor-contacto">
+            <div class="datos-de-contacto">
             <section class="redes">
                 <h2 class="título-contacto">
                     Me encontrás en estas redes sociales
@@ -117,7 +120,6 @@
                 <p class="descripción-contacto">
                     Si te interesa trabajar conmigo o conocer más de lo que hago <br>me podes encontrar en cualquiera de estas redes sociales 
                 </p>
-            </section>
             <section class="íconos-de-redes">
                 <ul class="lista-redes">
                     <li>
@@ -131,14 +133,16 @@
                     </li>
                 </ul>
             </section>
-        </div>
-    </section>
+        </section>
     <section class="sección-contacto">
         <h2 class="título-escribime">
             Escribime
         </h2>
+        </section>
+            </div>
+        </div>
+    </section> 
         <!--ACÁ VA EL FORM DE CONTACTO-->
-    </section>
     <footer>
         <nav class="nav-footer">
             <ul class="menú-footer">
