--- a/Proyecto1.html
+++ b/Proyecto1.html
@@ -21,9 +21,11 @@
 </head>
 <body>
     <header>
-        <!-- barra de navegación. Pendiente cambiar el estilo de las letras-->
+        <!-- barra de navegación -->
             <div class="contenedor-menú-principal">
             <nav class="menú-principal">
+
+            <!-- menú principal de navegación -->
             <ul class="lista-menú-principal">
                 <li class="item-menú-principal">
                     <a href="#"> ¡Bienvenides! </a>
@@ -41,18 +43,16 @@
             </nav>
         </div>
     </header>
-
-
     <section class="sección-presentación">
         <div class="Presentación">
         <div class="texto-presentación">
-            <p class="Bienvenida">
+            <p class="bienvenida">
             ¡Bienvenides! Soy
         </p>
-            <h1 class="Nombre">
+            <h1 class="nombre">
                 Juli Martinelli
             </h1>
-            <p class="Descripción">
+            <p class="descripción">
                 Desarrolladora, amante de los libros y de los bares de platitos
             </p>
             <a href="#" class="botón-proyectos"> MIS PROYECTOS </a> 
@@ -62,8 +62,6 @@
         </div>
         </div>
     </section>
-
-
     <section class="conocimientos">
         <div class="descripción-conocimientos">
             <h2 class="título-conocimientos">
