--- a/Proyecto1.html
+++ b/Proyecto1.html
@@ -58,7 +58,7 @@
             <a href="#" class="botón-proyectos"> MIS PROYECTOS </a> 
         </div>
         <div>
-            <img src="Imagen3.jpg" alt="Mujer trabajando en una computadora" height="400px" width="400px">
+            <img src="Imagen3.jpg" alt="Mujer trabajando en una computadora" height="400px" width="400px" class="imagen_presentación">
         </div>
         </div>
     </section>
@@ -77,14 +77,44 @@
                 <div class="tarjeta-herramienta">
                 </div>
                 <div class="tarjeta-herramienta">
+                    <a href="#" target="_blank">
+                        <img src="imagen_generador_de_memes.png" alt="personas frente a computadora" class="imagen_proyecto">
+                        <p class="nombre_proyecto"> 
+                            Generador de memes 
+                        </p>
+                    </a>
                 </div>
                 <div class="tarjeta-herramienta">
+                    <a href="#" target="_blank">
+                        <img src="imagen_match3.png" alt="mujer frente a computadora" class="imagen_proyecto">
+                        <p class="nombre_proyecto">
+                            Match 3
+                        </p>
+                    </a>
                 </div>
                 <div class="tarjeta-herramienta">
+                    <a href="#" target="_blank">
+                        <img src="imagen_controlador_de_gastos.png" alt="mujer con gráficos" class="imagen_proyecto">
+                        <p class="nombre_proyecto">
+                            Controlador de gastos
+                        </p>
+                    </a>
                 </div>
                 <div class="tarjeta-herramienta">
+                    <a href="#" target="_blank">
+                        <img src="imagen_administrador_de_reuniones.png" alt="personas reunidas" class="imagen_proyecto" >
+                        <p class="nombre_proyecto">
+                            Administrador de reuniones
+                        </p>
+                    </a>
                 </div>
                 <div class="tarjeta-herramienta">
+                    <a href="#" target="_blank">
+                        <img src="imagen_todoap.png" alt="mujer con teléfono gigante" class="imagen_proyecto" >
+                        <p class="nombre_proyecto">
+                            Administrador de reuniones
+                        </p>
+                    </a>
                 </div>
             </div>
         </div>
