--- a/Proyecto1.html
+++ b/Proyecto1.html
@@ -75,48 +75,53 @@
         </div>
             <div class="contenedor-herramientas">
                 <div class="tarjeta-herramienta">
-                </div>
-                <div class="tarjeta-herramienta">
                     <a href="#" target="_blank">
-                        <img src="imagen_generador_de_memes.png" alt="personas frente a computadora" class="imagen_proyecto">
-                        <p class="nombre_proyecto"> 
-                            Generador de memes 
+                        <i class="fa-brands fa-html5 icono-herramienta" style="color: #bf4013;"></i>
+                        <p class="nombre-herramienta"> 
+                            HTML 
                         </p>
                     </a>
                 </div>
                 <div class="tarjeta-herramienta">
                     <a href="#" target="_blank">
-                        <img src="imagen_match3.png" alt="mujer frente a computadora" class="imagen_proyecto">
-                        <p class="nombre_proyecto">
-                            Match 3
+                        <i class="fa-brands fa-css3-alt icono-herramienta" style="color: #bf4013;"></i>
+                        <p class="nombre-herramienta">
+                            CSS3
                         </p>
                     </a>
                 </div>
                 <div class="tarjeta-herramienta">
                     <a href="#" target="_blank">
-                        <img src="imagen_controlador_de_gastos.png" alt="mujer con gráficos" class="imagen_proyecto">
-                        <p class="nombre_proyecto">
-                            Controlador de gastos
+                        <i class="fa-brands fa-sass icono-herramienta" style="color: #bf4013;"></i>
+                        <p class="nombre-herramienta">
+                            Saas
                         </p>
                     </a>
                 </div>
                 <div class="tarjeta-herramienta">
                     <a href="#" target="_blank">
-                        <img src="imagen_administrador_de_reuniones.png" alt="personas reunidas" class="imagen_proyecto" >
-                        <p class="nombre_proyecto">
-                            Administrador de reuniones
+                        <i class="fa-brands fa-square-js icono-herramienta" style="color: #bf4013;"></i>
+                        <p class="nombre-herramienta">
+                            JavaScript
                         </p>
                     </a>
                 </div>
                 <div class="tarjeta-herramienta">
                     <a href="#" target="_blank">
-                        <img src="imagen_todoap.png" alt="mujer con teléfono gigante" class="imagen_proyecto" >
-                        <p class="nombre_proyecto">
-                            Administrador de reuniones
+                        <i class="fa-brands fa-react icono-herramienta" style="color: #bf4013;"></i>
+                        <p class="nombre-herramienta">
+                            React
                         </p>
                     </a>
                 </div>
-            </div>
+                <div class="tarjeta-herramienta">
+                    <a href="#" target="_blank">
+                        <i class="fa-brands fa-git-alt icono-herramienta" style="color: #bf4013;"></i>
+                        <p class="nombre-herramienta">
+                            GIT
+                        </p>
+                    </a>
+                </div>
         </div>
     </section>
     <section class="sección-frase">
@@ -136,40 +141,104 @@
             </p>
         </div>
         <div class="contenedor-proyectos">
+            <div class="tarjeta-herramienta">
+                <a href="#" target="_blank">
+                    <img src="imagen_generador_de_memes.png" alt="personas frente a computadora" class="imagen_proyecto">
+                    <p class="nombre-proyecto"> 
+                        Portfolio 
+                    </p>
+                </a>
+            </div>
+            <div class="tarjeta-herramienta">
+            <a href="#" target="_blank">
+                <img src="imagen_generador_de_memes.png" alt="personas frente a computadora" class="imagen_proyecto">
+                <p class="nombre-proyecto"> 
+                    Generador de memes 
+                </p>
+            </a>
+        </div>
+        <div class="tarjeta-proyecto">
+            <a href="#" target="_blank">
+                <img src="imagen_match3.png" alt="mujer frente a computadora" class="imagen_proyecto">
+                <p class="nombre-proyecto">
+                    Match 3
+                </p>
+            </a>
+        </div>
+        <div class="tarjeta-proyecto">
+            <a href="#" target="_blank">
+                <img src="imagen_controlador_de_gastos.png" alt="mujer con gráficos" class="imagen_proyecto">
+                <p class="nombre-proyecto">
+                    Controlador de gastos
+                </p>
+            </a>
+        </div>
+        <div class="tarjeta-proyecto">
+            <a href="#" target="_blank">
+                <img src="imagen_administrador_de_reuniones.png" alt="personas reunidas" class="imagen_proyecto" >
+                <p class="nombre-proyecto">
+                    Administrador de reuniones
+                </p>
+            </a>
+        </div>
+        <div class="tarjeta-proyecto">
+            <a href="#" target="_blank">
+                <img src="imagen_todoap.png" alt="mujer con teléfono gigante" class="imagen_proyecto" >
+                <p class="nombre_proyecto">
+                    Administrador de reuniones
+                </p>
+            </a>
         </div>
     </section>
     <section class="sección-contacto">
         <div class="contenedor-contacto">
-            <div class="datos-de-contacto">
-            <section class="redes">
+            <div class="contendor-redes">
+            <section class="redes"> 
                 <h2 class="título-contacto">
                     Me encontrás en estas redes sociales
                 </h2>
                 <p class="descripción-contacto">
                     Si te interesa trabajar conmigo o conocer más de lo que hago <br>me podes encontrar en cualquiera de estas redes sociales 
                 </p>
-            <section class="íconos-de-redes">
+            <section aria-label="iconos-redes"> 
                 <ul class="lista-redes">
+                    <li class="iconos-contacto">
+                        <a href="https://www.instagram.com/jumaartinelli/?hl=es-la" target="_blank" Instagram >
+                            <i class="fa-brands fa-instagram icono-contacto" style="color: #f2ad2b;">
+                            </i>
+                            @jumaartinelli
+                        </a>
+                        </li>
                     <li>
-                        Instagram
+                        <i class="fa-brands fa-linkedin icono-contacto" style="color: #f2ad2b;"></i>
                     </li>
                     <li>
-                        Linkedin
-                    </li>
-                    <li>
-                        Gmail
+                        <a href="mailto:julietaamartinelli@gmail.com">
+                        <i class="fa-solid fa-envelope icono-contacto" style="color: #f2ad2b;">
+                        </i>
+                        julietaamartinelli@gmail.com
+                    </a>
                     </li>
                 </ul>
             </section>
-        </section>
-    <section class="sección-contacto">
+            </div>
+    <section class="sección-escribime">
         <h2 class="título-escribime">
             Escribime
         </h2>
-        </section>
-            </div>
+        <div class="formulario-contacto">
+            <label for="nombre"> Nombre </label>
+            <input type="text" name="nombre" id="firstname" class="input-nombre" placeholder="Por ejemplo: Julieta" aria aria-label="Nombre" required>
+            <label for="Apellido"> Apellido </label>
+            <input type="text" name="apellido" id="lastname" class="input-apellido" placeholder="Por ejemplo: Martinelli" aria aria-label="apellido" required>
+            <label for="Mail"> Mail </label>
+            <input type="text" name="mail" id="mail" class="input-mail" placeholder="Por ejemplo: julietaamartinelli@gmail.com" aria aria-label="mail" required>
+            <label for="Mensaje"> Mail </label>
+            <textarea name="Mensaje" id="Mensaje" cols="50" rows="10" class="input-mensaje" placeholder="Dejame acá tu mensaje" aria-label="mensaje" required></textarea>
         </div>
-    </section> 
+        </section>
+        </div>
+    </section>
         <!--ACÁ VA EL FORM DE CONTACTO-->
     <footer>
         <nav class="nav-footer">
@@ -188,18 +257,24 @@
                 </li>
             </ul>
             </nav>
-            <ul class="lista-redes">
+            <ul class="lista-redes-footer">
                 <li class="apartado-nav-footer">
-                    Instagram
+                    <a href="https://www.instagram.com/jumaartinelli/?hl=es-la" target="_blank" Instagram >
+                        <i class="fa-brands fa-instagram icono-footer" style="color: #f2ad2b;">
+                        </i>
+                    </a>
+                    </li>
+                <li>
+                    <i class="fa-brands fa-linkedin icono-footer" style="color: #f2ad2b;"></i>
                 </li>
                 <li>
-                    Linkedin
-                </li>
-                <li>
-                    Gmail
+                    <a href="mailto:julietaamartinelli@gmail.com">
+                    <i class="fa-solid fa-envelope icono-footer" style="color: #f2ad2b;">
+                    </i>
+                </a>
                 </li>
             </ul>
-            <p>
+            <p class="frase-cierre">
             Hecho con amor y mucho trabajo por Juli
             </p>
     </footer>
