formulario hover y medias querys

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <!--acá termina barra de navegación -->
         </div>
     </header>
+    <!--acá empieza la sección de presentación -->
     <section class="sección-presentación">
         <div class="Presentación">
         <div class="texto-presentación">
@@ -200,7 +201,7 @@
                     Me encontrás en estas redes sociales
                 </h2>
                 <p class="descripción-contacto">
-                    Si te interesa trabajar conmigo o conocer más de lo que hago <br>me podes encontrar en cualquiera de estas redes sociales 
+                    Si te interesa trabajar conmigo o conocer más <br>de lo que hago me podes encontrar en cualquiera de estas redes sociales 
                 </p>
             <section aria-label="iconos-redes"> 
                 <ul class="lista-redes">
@@ -284,6 +285,6 @@
             Hecho con amor y mucho trabajo por Juli
             </p>
     </footer>
-    <!--acá termina el footer -->
+    <!--acá termina el footer / el sitio -->
 </body>
 </html>
