Commit entrega proyecto

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </header>
     <!--acá empieza la sección de presentación -->
     <section class="sección-presentación">
-        <div class="Presentación">
+        <div class="presentación">
         <div class="texto-presentación">
             <p class="bienvenida">
             ¡Bienvenides! Soy
@@ -63,7 +63,7 @@
         </div>
         </div>
     </section>
-    <!--sección herramientas -->
+    <!--acá termina la sección de presentación y empieza la sección de herramientas-->
     <section class="conocimientos">
         <div class="descripción-conocimientos">
             <h2 class="título-conocimientos">
@@ -126,6 +126,7 @@
                 </div>
         </div>
     </section>
+    <!--acá termina la sección herramientas y empieza la sección de proyectos -->
     <section class="sección-frase">
         <div class="contenido-frase">
             <h2 class="frase">
@@ -192,6 +193,7 @@
             </a>
         </div>
     </section>
+    <!--acá termina la sección de proyectos y empieza la sección de contacto -->
     <section class="sección-contacto">
         <div class="contenedor-contacto">
             <div class="contendor-redes">
@@ -225,7 +227,7 @@
                 </ul>
             </section>
             </div>
-            <!--acá empieza el formulario -->
+            <!--acá empieza la sección que contiene el formulario de contacto -->
     <section class="sección-escribime">
         <h2 class="título-escribime">
             Escribime
@@ -246,7 +248,7 @@
         </section>
         </div>
     </section>
-    <!--acá termina el formulario y empieza el footer -->
+    <!--acá termina la sección de contacto (general) y empieza el footer -->
     <footer>
         <nav class="nav-footer">
             <ul class="menú-footer">
